--- a/back/app/Dockerfile
+++ b/back/app/Dockerfile
@@ -1,17 +1,13 @@
-FROM python:3.13-slim
+FROM python:3.11-slim
 
-# Instalar dependencias del sistema
+# Instalar ffmpeg
 RUN apt-get update && apt-get install -y ffmpeg
 
-# Crear directorio de trabajo
-WORKDIR /app
+# Instalar dependencias de Python
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar requirements e instalar
-COPY back/app/requirements.txt .
-RUN pip install -r requirements.txt
+# Copiar tu código
+COPY . .
 
-# Copiar el resto del backend
-COPY back/app/ .
-
-# Comando de arranque
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "${PORT}"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
