--- a/back/app/Dockerfile
+++ b/back/app/Dockerfile
@@ -7,6 +7,8 @@ WORKDIR /app
 # Instalar dependencias de Python
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -U yt-dlp
+
 
 # Copiar tu código
 COPY . .
